# campgear-store

./: .gitignore  API_DESIGN.md  ARCHITECTURE.md  DEPLOYMENT.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a01ab1a343a4_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  cart.py  categories.py  orders.py  products.py  sso.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  audit.py  cart.py  order.py  product.py  user.py
backend/app/schemas/: auth.py  cart.py  common.py  order.py  product.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_00_health.py  test_01_auth.py  test_02_categories.py  test_03_products.py  test_04_cart.py  test_05_orders.py  test_06_admin.py
deploy/db/: init.sql
deploy/dmz/: docker-compose.yml  nginx.conf
deploy/internal/: .env.example  docker-compose.yml
frontend/: nginx.conf
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AdminRoute.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  ProductCard.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Cart.tsx  Checkout.tsx  Home.tsx  Login.tsx  OrderDetail.tsx  Orders.tsx  ProductDetail.tsx  Register.tsx  SsoCallback.tsx
frontend/src/pages/admin/: AuditLogs.tsx  (+5 more)
frontend/src/types/: index.ts
